@@ -1,7 +1,7 @@
-AUX 70svn-gentoo.el 210 RMD160 3c25e6d04b6ac431e030fc0d76080f8a0bb3ba08 SHA1 47b4e7758086439390a23cc0eb76e5038392a08b SHA256 5828272d4c5c97351b31b487ba563b64451e3ec402f18623acbca5fadc9d29d2
-MD5 9af6c8e0c660d202b70b82b2049bdf4a files/70svn-gentoo.el 210
-RMD160 3c25e6d04b6ac431e030fc0d76080f8a0bb3ba08 files/70svn-gentoo.el 210
-SHA256 5828272d4c5c97351b31b487ba563b64451e3ec402f18623acbca5fadc9d29d2 files/70svn-gentoo.el 210
+AUX 70svn-gentoo.el 331 RMD160 1de1310ae7e4bdbecef3c685ef8d7ff95b9aab87 SHA1 48eb99e9d494a4a674de32e599914df234b627cd SHA256 c0d733bd3f7c75c47acaea4fd0c816d45ee2cd765da70dc494666f38c91e3d87
+MD5 23c250f0b440c1df1bc142a7d76b4c62 files/70svn-gentoo.el 331
+RMD160 1de1310ae7e4bdbecef3c685ef8d7ff95b9aab87 files/70svn-gentoo.el 331
+SHA256 c0d733bd3f7c75c47acaea4fd0c816d45ee2cd765da70dc494666f38c91e3d87 files/70svn-gentoo.el 331
 AUX subversion-1.1.1-perl-vendor.patch 713 RMD160 fdc54d38c44c3e1273b654b3d1a2f4a76f91aec3 SHA1 8c9a2fb00c4cb17dd477937701587a5da3fe1800 SHA256 d7c5994fa66d77ec956b2e1ca1020fadcf1200bdd2acce974033e9839bb8f7c3
 MD5 b8146e2661f55257aef6d41e79897b63 files/subversion-1.1.1-perl-vendor.patch 713
 RMD160 fdc54d38c44c3e1273b654b3d1a2f4a76f91aec3 files/subversion-1.1.1-perl-vendor.patch 713
@@ -73,10 +73,10 @@ EBUILD subversion-1.4.3.ebuild 12243 RMD160 6da68ffbd1490a4b7fd2d43227fc80e32c92
 MD5 abb98b2d335f45b13743f4fcd8142db8 subversion-1.4.3.ebuild 12243
 RMD160 6da68ffbd1490a4b7fd2d43227fc80e32c922df1 subversion-1.4.3.ebuild 12243
 SHA256 7a0482be7038d1357c236897f29fd711cb946884baa721f3e414ff95c4546d84 subversion-1.4.3.ebuild 12243
-MISC ChangeLog 43603 RMD160 47bbfae28db29401b793c85bcb1d51af0522ae40 SHA1 eaba5125b8e2e77700d3617723986ae836f8ad25 SHA256 d121bb1a1aff9df8516e3a46e4e2a1c65f9e63934418c9cae90d2e9634e32159
-MD5 b324147f4595934649795357916ade40 ChangeLog 43603
-RMD160 47bbfae28db29401b793c85bcb1d51af0522ae40 ChangeLog 43603
-SHA256 d121bb1a1aff9df8516e3a46e4e2a1c65f9e63934418c9cae90d2e9634e32159 ChangeLog 43603
+MISC ChangeLog 43795 RMD160 1d367e5d6fe66d090a601644c787f8dc684c7148 SHA1 3f0bcaf803f7b5b5680cf4290d19e7989e084c5a SHA256 a07288e198c7293268218530e62fec0544c063eb9a440a352a12b29e7e8ac2fe
+MD5 f3f45c2fe8038d2bbbe4a0ea8fddf894 ChangeLog 43795
+RMD160 1d367e5d6fe66d090a601644c787f8dc684c7148 ChangeLog 43795
+SHA256 a07288e198c7293268218530e62fec0544c063eb9a440a352a12b29e7e8ac2fe ChangeLog 43795
 MISC metadata.xml 222 RMD160 b21e9d4420a67a847d490dc86a587e1d5f21fff0 SHA1 76e56ef0ec9c71b3032d1c501e358dd80fa1664b SHA256 4710a38e11b23d4355a7a0cba621d9680e2148aa173528491e88903487e93152
 MD5 8fbcd267012fd1eef74d5161888cc7b8 metadata.xml 222
 RMD160 b21e9d4420a67a847d490dc86a587e1d5f21fff0 metadata.xml 222
